k8s/openshift/config-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: image-registry.openshift-image-registry.svc:5000/hammadmaqsood135-dev/config-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8888
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  labels:
    app: config-server
spec:
  selector:
    app: config-server
  ports:
    - name: http
      port: 8888
      targetPort: 8888
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: config-server
spec:
  to:
    kind: Service
    name: config-server
  port:
    targetPort: http
